--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "Express",
     "authentication"
   ],
-  "author": "Avijeet Pandey",
+  "author": "Saumen Roy",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
